fixed strange classes and alignment

--- a/game.css
+++ b/game.css
@@ -17,6 +17,7 @@ body {
   width: 100%;
   z-index: 2;
   box-shadow: 0 4px 13px 0 rgba(122, 122, 122, 0.2);
+  align-items: center;
 }
 
 .infotop {
